--- a/index.html
+++ b/index.html
@@ -222,17 +222,17 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <!-- NAS -->
                     <div class="bg-[#111] border border-gray-800 p-8 rounded-2xl hover:border-blue-500 transition-colors duration-300 group">
-                        <img src="https://placehold.co/80x80/1E40AF/FFFFFF?text=NAS" class="h-16 w-16 mb-4 rounded-full" alt="NAS Icon">
+                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/solutions/network-attached-storage/nas-product-my-passport-my-book.png" alt="NAS Icon">
                         <h3 class="text-2xl font-bold mb-2">NAS</h3><p class="text-gray-400 font-light mb-4">Power your personal cloud with 24/7 reliability.</p><a href="#" class="text-blue-400 font-semibold group-hover:text-white transition-colors">Discover WD Red &rarr;</a>
                     </div>
                     <!-- Surveillance -->
                     <div class="bg-[#111] border border-gray-800 p-8 rounded-2xl hover:border-blue-500 transition-colors duration-300 group">
-                        <img src="https://placehold.co/80x80/5B21B6/FFFFFF?text=CCTV" class="h-16 w-16 mb-4 rounded-full" alt="Surveillance Icon">
+                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/solutions/surveillance/surveillance-hero.jpg" alt="Surveillance Icon">
                         <h3 class="text-2xl font-bold mb-2">Surveillance</h3><p class="text-gray-400 font-light mb-4">Capture every frame with optimized recording.</p><a href="#" class="text-blue-400 font-semibold group-hover:text-white transition-colors">View WD Purple &rarr;</a>
                     </div>
                     <!-- RAID -->
                     <div class="bg-[#111] border border-gray-800 p-8 rounded-2xl hover:border-blue-500 transition-colors duration-300 group">
-                        <img src="https://placehold.co/80x80/BE123C/FFFFFF?text=RAID" class="h-16 w-16 mb-4 rounded-full" alt="RAID Icon">
+                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/solutions/raid/icon-raid-overview1.svg" class="h-16 w-16 mb-4 rounded-full" alt="RAID Icon">
                         <h3 class="text-2xl font-bold mb-2">RAID</h3><p class="text-gray-400 font-light mb-4">Performance and redundancy for critical data.</p><a href="#" class="text-blue-400 font-semibold group-hover:text-white transition-colors">Learn about RAID &rarr;</a>
                     </div>
                 </div>
