--- a/index.html
+++ b/index.html
@@ -148,21 +148,21 @@
                     <div class="logo-scroller-container">
                         <div class="logo-scroller">
                             <div class="flex items-center space-x-16 px-8 grayscale opacity-60">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+A" alt="Client A Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+B" alt="Client B Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+C" alt="Client C Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+D" alt="Client D Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+E" alt="Client E Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+F" alt="Client F Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+G" alt="Client G Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client A Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client B Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client C Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client D Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client E Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client F Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client G Logo" class="h-8">
                                 <!-- Duplicate for seamless scroll -->
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+A" alt="Client A Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+B" alt="Client B Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+C" alt="Client C Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+D" alt="Client D Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+E" alt="Client E Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+F" alt="Client F Logo" class="h-8">
-                                <img src="https://placehold.co/120x40/FFFFFF/CCCCCC?text=CLIENT+G" alt="Client G Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client A Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client B Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client C Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client D Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client E Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client F Logo" class="h-8">
+                                <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Client G Logo" class="h-8">
                             </div>
                         </div>
                     </div>
@@ -227,12 +227,12 @@
                     </div>
                     <!-- Surveillance -->
                     <div class="bg-[#111] border border-gray-800 p-8 rounded-2xl hover:border-blue-500 transition-colors duration-300 group">
-                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/solutions/surveillance/surveillance-hero.jpg" alt="Surveillance Icon">
+                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/solutions/network-attached-storage/nas-product-my-passport-my-book.png" alt="Surveillance Icon">
                         <h3 class="text-2xl font-bold mb-2">Surveillance</h3><p class="text-gray-400 font-light mb-4">Capture every frame with optimized recording.</p><a href="#" class="text-blue-400 font-semibold group-hover:text-white transition-colors">View WD Purple &rarr;</a>
                     </div>
                     <!-- RAID -->
                     <div class="bg-[#111] border border-gray-800 p-8 rounded-2xl hover:border-blue-500 transition-colors duration-300 group">
-                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/solutions/raid/icon-raid-overview1.svg" class="h-16 w-16 mb-4 rounded-full" alt="RAID Icon">
+                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/solutions/network-attached-storage/nas-product-my-passport-my-book.png" class="h-16 w-16 mb-4 rounded-full" alt="RAID Icon">
                         <h3 class="text-2xl font-bold mb-2">RAID</h3><p class="text-gray-400 font-light mb-4">Performance and redundancy for critical data.</p><a href="#" class="text-blue-400 font-semibold group-hover:text-white transition-colors">Learn about RAID &rarr;</a>
                     </div>
                 </div>
