--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             overflow-x: hidden; /* Prevent horizontal scroll from logo scroller */
         }
         .hero-bg {
-            background: linear-gradient(to bottom, #0A0A0A 0%, rgba(10,10,10,0) 50%, #0A0A0A 100%), url('https://images.unsplash.com/photo-1614741118884-62ac62b22860?q=80&w=2574&auto=format&fit=crop');
+            background: linear-gradient(to bottom, #0A0A0A 0%, rgba(10,10,10,0) 50%, #0A0A0A 100%), url('https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/lifestyle/mh-1a-data-centers-always-rely-on-hdd.png');
             background-size: cover;
             background-position: center;
         }
@@ -92,12 +92,13 @@
 </head>
 <body class="bg-black">
 
+   
     <!-- Header / Navigation -->
     <header class="bg-black/50 backdrop-blur-lg border-b border-gray-800 sticky top-0 z-50">
         <nav class="container mx-auto px-6 lg:px-8 py-4 flex justify-between items-center">
             <div class="flex items-center space-x-8">
                 <a href="#" class="flex-shrink-0">
-                    <svg class="h-7 w-auto" viewBox="0 0 174 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24.46 32.78H32.3v-5.02h-7.84v-4.98h7.1v-5.04h-7.1v-4.98h7.84V7.74H16.62v32.52h15.72v-5.02h-7.84v-2.46Z" fill="#FFFFFF"></path><path d="M43.34 40.26h-7.84V7.74h7.84v32.52ZM39.42 3.3a3.92 3.92 0 1 0 0-7.84 3.92 3.92 0 0 0 0 7.84Z" fill="#FFFFFF"></path><path d="M63.18 40.26h-7.84V7.74h15.7v5.02h-7.86v9.98h7.1v5.02h-7.1v12.5Z" fill="#FFFFFF"></path><path d="M83.42 40.26h-7.86V7.74h7.86v32.52Z" fill="#FFFFFF"></path><path d="M103.64 40.26h-7.84V7.74h7.84v32.52Z" fill="#FFFFFF"></path><path d="M112.5 24.32a12.18 12.18 0 1 0 24.36 0 12.18 12.18 0 0 0-24.36 0Zm16.52 0a4.34 4.34 0 1 1-8.68 0 4.34 4.34 0 0 1 8.68 0Z" fill="#FFFFFF"></path><path d="M149.36 40.26h-7.84V7.74h7.84v32.52Z" fill="#FFFFFF"></path><path d="M165.16 40.26h-7.84V7.74h15.7v5.02h-7.86v9.98h7.1v5.02h-7.1v12.5Z" fill="#FFFFFF"></path><path d="m.02 24.01 11.23-19.45h-5.6L0 14.95v18.1h13.43v-5.02H5.02v-3.99Z" fill="#0077FF"></path><path d="m11.25 4.56-5.6 9.7h11.2l-5.6-9.7Z" fill="#0077FF"></path></svg>
+                    <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/brand-logos/header-main-logo.svg" alt="Western Digital Logo" class="h-7 w-auto">
                 </a>
                 <div class="hidden lg:flex items-center space-x-8">
                     <a href="#" class="text-gray-300 hover:text-white font-medium transition-colors">Products</a>
@@ -232,7 +233,7 @@
                     </div>
                     <!-- RAID -->
                     <div class="bg-[#111] border border-gray-800 p-8 rounded-2xl hover:border-blue-500 transition-colors duration-300 group">
-                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/solutions/network-attached-storage/nas-product-my-passport-my-book.png" class="h-16 w-16 mb-4 rounded-full" alt="RAID Icon">
+                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/solutions/network-attached-storage/nas-product-my-passport-my-book.png" alt="RAID Icon">
                         <h3 class="text-2xl font-bold mb-2">RAID</h3><p class="text-gray-400 font-light mb-4">Performance and redundancy for critical data.</p><a href="#" class="text-blue-400 font-semibold group-hover:text-white transition-colors">Learn about RAID &rarr;</a>
                     </div>
                 </div>
@@ -326,15 +327,15 @@
                 <h2 class="text-4xl md:text-5xl font-bold tracking-tighter text-center mb-16">Insights & Resources</h2>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="group bg-[#111] border border-gray-800 rounded-2xl overflow-hidden">
-                        <img src="https://placehold.co/400x250/111111/FFFFFF?text=Insight+1" alt="Article 1" class="w-full h-48 object-cover transform group-hover:scale-105 transition-transform duration-300">
+                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/nonwebp/data-center-storage-b2b.png.wdthumb.500.500.webp" alt="Article 1" class="w-full h-48 object-cover transform group-hover:scale-105 transition-transform duration-300">
                         <div class="p-6"><h3 class="text-xl font-bold mb-2">The Future of the Data Center</h3><p class="text-gray-400 font-light mb-4">An analysis of SMR technology and the path to next-generation HDD capacity.</p><a href="#" class="text-blue-400 font-semibold group-hover:text-white transition-colors">Read the Whitepaper &rarr;</a></div>
                     </div>
                     <div class="group bg-[#111] border border-gray-800 rounded-2xl overflow-hidden">
-                        <img src="https://placehold.co/400x250/111111/FFFFFF?text=Insight+2" alt="Article 2" class="w-full h-48 object-cover transform group-hover:scale-105 transition-transform duration-300">
+                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/nonwebp/data-center-storage-b2b.png.wdthumb.500.500.webp" alt="Article 2" class="w-full h-48 object-cover transform group-hover:scale-105 transition-transform duration-300">
                         <div class="p-6"><h3 class="text-xl font-bold mb-2">Understanding RAID</h3><p class="text-gray-400 font-light mb-4">A primer on RAID levels and how they can protect your data and improve performance.</p><a href="#" class="text-blue-400 font-semibold group-hover:text-white transition-colors">Learn About RAID &rarr;</a></div>
                     </div>
                     <div class="group bg-[#111] border border-gray-800 rounded-2xl overflow-hidden">
-                        <img src="https://placehold.co/400x250/111111/FFFFFF?text=Insight+3" alt="Article 3" class="w-full h-48 object-cover transform group-hover:scale-105 transition-transform duration-300">
+                        <img src="https://www.westerndigital.com/content/dam/store/en-us/assets/nonwebp/data-center-storage-b2b.png.wdthumb.500.500.webp" alt="Article 3" class="w-full h-48 object-cover transform group-hover:scale-105 transition-transform duration-300">
                         <div class="p-6"><h3 class="text-xl font-bold mb-2">HDD vs. SSD: What's the Difference?</h3><p class="text-gray-400 font-light mb-4">Understand the key differences to choose the right type of drive for your needs.</p><a href="#" class="text-blue-400 font-semibold group-hover:text-white transition-colors">Read the Comparison &rarr;</a></div>
                     </div>
                 </div>
