--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             </div>
         </section>
 
-              <!-- Section 7: Best Sellers & Promotions -->
+         <!-- Section 7: Best Sellers & Promotions -->
         <section class="py-24 md:py-32 section">
             <div class="container mx-auto px-6 lg:px-8">
                 <h2 class="text-4xl md:text-5xl font-bold tracking-tighter text-center mb-16">Popular Products & Current Offers</h2>
@@ -301,6 +301,16 @@
                             <div class="bg-black"><img src="https://placehold.co/400x300/111111/FFFFFF?text=Product+2" alt="Best Seller 2" class="w-full h-48 object-contain p-4 transform group-hover:scale-105 transition-transform duration-300"></div>
                             <div class="p-6"><h3 class="font-semibold text-white text-lg">WD Red Pro 10TB</h3><p class="text-sm text-gray-400 mb-2 font-light">NAS Hard Drive</p><p class="font-bold text-xl text-white">$279.99</p></div>
                         </div>
+                        <!-- Best Seller 3 -->
+                        <div class="group bg-[#111] border border-gray-800 rounded-2xl overflow-hidden">
+                            <div class="bg-black"><img src="https://placehold.co/400x300/111111/FFFFFF?text=Product+3" alt="Best Seller 3" class="w-full h-48 object-contain p-4 transform group-hover:scale-105 transition-transform duration-300"></div>
+                            <div class="p-6"><h3 class="font-semibold text-white text-lg">WD Blue 2TB</h3><p class="text-sm text-gray-400 mb-2 font-light">Internal PC HDD</p><p class="font-bold text-xl text-white">$69.99</p></div>
+                        </div>
+                        <!-- Best Seller 4 -->
+                        <div class="group bg-[#111] border border-gray-800 rounded-2xl overflow-hidden">
+                            <div class="bg-black"><img src="https://placehold.co/400x300/111111/FFFFFF?text=Product+4" alt="Best Seller 4" class="w-full h-48 object-contain p-4 transform group-hover:scale-105 transition-transform duration-300"></div>
+                            <div class="p-6"><h3 class="font-semibold text-white text-lg">WD Purple 8TB</h3><p class="text-sm text-gray-400 mb-2 font-light">Surveillance HDD</p><p class="font-bold text-xl text-white">$199.99</p></div>
+                        </div>
                     </div>
                     <!-- Promotion -->
                     <div class="promo-bg rounded-2xl p-8 flex flex-col justify-center items-center text-center text-white">
@@ -311,6 +321,7 @@
                 </div>
             </div>
         </section>
+
 
         <!-- Section 8: Support Hub -->
         <section class="py-24 md:py-32 section">
