--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
         <!-- Section 4: Solutions by Use Case -->
         <section class="py-24 md:py-32 section">
             <div class="container mx-auto px-6 lg:px-8">
-                <h2 class="text-4xl md:text-5xl font-bold tracking-tighter text-center mb-16">Engineered for the Mission</h2>
+                <h2 class="text-4xl md:text-5xl font-bold tracking-tighter text-center mb-16">Storage Engineered for the Mission</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-8">
                     <!-- Gaming -->
                     <div class="bg-[#111] border border-gray-800 rounded-2xl overflow-hidden group hover:border-blue-500 transition-colors duration-300">
@@ -246,33 +246,33 @@
                  <!-- Section 7: Best Sellers & Promotions -->
         <section class="py-24 md:py-32 section">
             <div class="container mx-auto px-6 lg:px-8">
-                <h2 class="text-4xl md:text-5xl font-bold tracking-tighter text-center mb-16">Popular Products & Current Offers</h2>
+                <h2 class="text-4xl md:text-5xl font-bold tracking-tighter text-center mb-16">Popular Drives & Current Offers</h2>
                 <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
                     <div class="lg:col-span-2 grid grid-cols-1 sm:grid-cols-2 gap-8">
                         <!-- Best Seller 1 -->
                         <div class="group bg-[#111] border border-gray-800 rounded-2xl overflow-hidden">
-                            <div class="bg-black"><img src="https://placehold.co/400x300/111111/FFFFFF?text=Product+1" alt="Best Seller 1" class="w-full h-48 object-contain p-4 transform group-hover:scale-105 transition-transform duration-300"></div>
+                            <div class="bg-black"><img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/product/western-digital-cat4-surveillance.png.wdthumb.500.500.webp" alt="Best Seller 1" class="w-full h-48 object-contain p-4 transform group-hover:scale-105 transition-transform duration-300"></div>
                             <div class="p-6"><h3 class="font-semibold text-white text-lg">WD My Passport 4TB</h3><p class="text-sm text-gray-400 mb-2 font-light">Portable Hard Drive</p><p class="font-bold text-xl text-white">$109.99</p></div>
                         </div>
                         <!-- Best Seller 2 -->
                         <div class="group bg-[#111] border border-gray-800 rounded-2xl overflow-hidden">
-                            <div class="bg-black"><img src="https://placehold.co/400x300/111111/FFFFFF?text=Product+2" alt="Best Seller 2" class="w-full h-48 object-contain p-4 transform group-hover:scale-105 transition-transform duration-300"></div>
+                            <div class="bg-black"><img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/product/western-digital-cat1-hard-drives.png.wdthumb.500.500.webp" alt="Best Seller 2" class="w-full h-48 object-contain p-4 transform group-hover:scale-105 transition-transform duration-300"></div>
                             <div class="p-6"><h3 class="font-semibold text-white text-lg">WD Red Pro 10TB</h3><p class="text-sm text-gray-400 mb-2 font-light">NAS Hard Drive</p><p class="font-bold text-xl text-white">$279.99</p></div>
                         </div>
                         <!-- Best Seller 3 -->
                         <div class="group bg-[#111] border border-gray-800 rounded-2xl overflow-hidden">
-                            <div class="bg-black"><img src="https://placehold.co/400x300/111111/FFFFFF?text=Product+3" alt="Best Seller 3" class="w-full h-48 object-contain p-4 transform group-hover:scale-105 transition-transform duration-300"></div>
+                            <div class="bg-black"><img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/product/western-digital-cat3-nas.png.wdthumb.500.500.webp" alt="Best Seller 3" class="w-full h-48 object-contain p-4 transform group-hover:scale-105 transition-transform duration-300"></div>
                             <div class="p-6"><h3 class="font-semibold text-white text-lg">WD Blue 2TB</h3><p class="text-sm text-gray-400 mb-2 font-light">Internal PC HDD</p><p class="font-bold text-xl text-white">$69.99</p></div>
                         </div>
                         <!-- Best Seller 4 -->
                         <div class="group bg-[#111] border border-gray-800 rounded-2xl overflow-hidden">
-                            <div class="bg-black"><img src="https://placehold.co/400x300/111111/FFFFFF?text=Product+4" alt="Best Seller 4" class="w-full h-48 object-contain p-4 transform group-hover:scale-105 transition-transform duration-300"></div>
+                            <div class="bg-black"><img src="https://www.westerndigital.com/content/dam/store/en-us/assets/home-page/product/western-digital-cat6-raid.png.wdthumb.500.500.webp" alt="Best Seller 4" class="w-full h-48 object-contain p-4 transform group-hover:scale-105 transition-transform duration-300"></div>
                             <div class="p-6"><h3 class="font-semibold text-white text-lg">WD Purple 8TB</h3><p class="text-sm text-gray-400 mb-2 font-light">Surveillance HDD</p><p class="font-bold text-xl text-white">$199.99</p></div>
                         </div>
                     </div>
                     <!-- Promotion -->
                     <div class="promo-bg rounded-2xl p-8 flex flex-col justify-center items-center text-center text-white">
-                        <h3 class="text-3xl font-bold mb-2">Weekly Sale</h3>
+                        <h3 class="text-3xl font-bold mb-2">Black Friday Sale</h3>
                         <p class="text-lg mb-4 font-light text-blue-200">Get 20% off all WD Elements desktop drives.</p>
                         <a href="#" class="bg-white hover:bg-gray-200 text-black font-bold py-3 px-8 rounded-full transition duration-300">Shop the Sale</a>
                     </div>
@@ -284,7 +284,7 @@
         <!-- Section 5: Product Portfolio & Capacity Filter -->
         <section class="py-24 md:py-32 section">
             <div class="container mx-auto px-6 lg:px-8">
-                <h2 class="text-4xl md:text-5xl font-bold tracking-tighter text-center mb-16">Explore Our Product Portfolio</h2>
+                <h2 class="text-4xl md:text-5xl font-bold tracking-tighter text-center mb-16">Explore WDT Product Portfolio</h2>
                 <div class="mb-12">
                     <h3 class="text-xl font-semibold text-center text-gray-300 mb-6">Shop by Capacity</h3>
                     <div class="flex justify-center flex-wrap gap-4">
